--- a/frontend/src/pages/nopage.css
+++ b/frontend/src/pages/nopage.css
@@ -6,3 +6,24 @@ h1 {
 p {
     text-align: center;
 }
+
+iframe {
+    width: 480px;
+    height: 269px;
+}
+
+@media  screen and (max-width:960px) {
+    h1 {
+        text-align: center;
+        color: orange;
+    }
+    
+    p {
+        text-align: center;
+    }
+
+    iframe {
+        width: 300px;
+        height: 250px;
+    }
+}
