--- a/frontend/src/pages/nopage.css
+++ b/frontend/src/pages/nopage.css
@@ -15,7 +15,7 @@ iframe {
 @media  screen and (max-width:960px) {
     h1 {
         text-align: center;
-        color: orange;
+        color: red;
     }
     
     p {
