did things...working on getting login to work

--- a/frontend/src/pages/pit.css
+++ b/frontend/src/pages/pit.css
@@ -3,6 +3,10 @@
     text-align: center;
 }
 
+.eventSelect {
+    justify-content: center;
+}
+
 .inputs {
     display: block;
     margin-left: auto;
